[package]
name = "asselect_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-file = "0.2"
gloo-net = "0.2"
gloo-storage = "0.2"
gloo-utils = "0.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = {version = "0.20", features = ["csr"]}

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "HtmlAnchorElement",
]

[profile.release]
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
